--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 </head>
 <body>
     <div id="characters"></div>
+    <div id="chosen">
+        <h2 class="clearfix">Your Character</h2>
+    </div>
+
+    <div id="fight">
+        <h2 id="enemies">Enemies Available To Attack</h2>
+        <h2>Fight Section</h2>
+        <button>Attack</button>
+        <h2>Defender</h2>
+    </div>
 
     <script src="assets/javascript/script.js"></script>
 </body>
