--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
     <title>Document</title>
 </head>
 <body>
+    <h2 class="clearfix">Your Character</h2>
     <div id="characters"></div>
-    <div id="chosen">
-        <h2 class="clearfix">Your Character</h2>
-    </div>
-
     <div id="fight">
-        <h2 id="enemies">Enemies Available To Attack</h2>
-        <h2>Fight Section</h2>
+        <h2 class="clearfix">Enemies Available To Attack</h2>
+        <div id="enemies"></div>
+        <h2 class="clearfix">Fight Section</h2>
         <button>Attack</button>
         <h2>Defender</h2>
     </div>
