--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
         <h2 class="clearfix">Enemies Available To Attack</h2>
         <div id="enemies"></div>
         <h2 class="clearfix">Fight Section</h2>
-        <button>Attack</button>
-        <h2>Defender</h2>
+        <button class="clearfix">Attack</button>
+    </div>
+    <div id="defender">
+        <h2 class="clearfix">Defender</h2>
     </div>
 
     <script src="assets/javascript/script.js"></script>
