--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h2 class="clearfix">Enemies Available To Attack</h2>
         <div id="enemies"></div>
         <h2 class="clearfix">Fight Section</h2>
-        <button class="clearfix">Attack</button>
+        <button class="clearfix attack">Attack</button>
     </div>
     <div id="defender">
         <h2 class="clearfix">Defender</h2>
