--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div id="defender">
         <h2 class="clearfix">Defender</h2>
     </div>
+    <p id="wins"></p>
 
     <script src="assets/javascript/script.js"></script>
 </body>
