--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="defender">
         <h2 class="clearfix">Defender</h2>
     </div>
-    <p id="wins"></p>
+    <p id="win"></p>
 
     <script src="assets/javascript/script.js"></script>
 </body>
