Added dynamic Stats box. Game Finished other than a few minor style changes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h2 class="clearfix">Your Character</h2>
+    <h2>Your Character</h2>
     <div id="characters"></div>
+    <aside id="stats">
+        <p id="statName"></p>
+        <p id="health"></p>
+        <p id="damage"></p>
+        <p id="counter"></p>
+    </aside>
     <div id="fight">
         <h2 class="clearfix">Enemies Available To Attack</h2>
         <div id="enemies"></div>
@@ -21,7 +27,7 @@
     <div id="defender">
         <h2 class="clearfix">Defender</h2>
     </div>
-    <p id="win"></p>
+    <p id="win" class="clearfix"></p>
 
     <script src="assets/javascript/script.js"></script>
 </body>
